--- a/src/app/list-claim/list-claim.component.html
+++ b/src/app/list-claim/list-claim.component.html
@@ -1,11 +1,13 @@
-<div class="col-md-6 user-container">
-  <h2 style="margin: auto"> User Details</h2>
-  <button class="btn btn-danger" style="width:100px" (click)="addClaim()"> Add Claim</button>
-  <button class="btn btn-danger" style="width:100px" (click)="addUser()"> Add User</button>
+<div class="col-md-8 user-container">
+  <h2 style="margin: auto">Claims</h2>
+  <div class="col-md-8 user-container">
+    <div class="row row-no-gutters">
+      <div><button class="btn btn-danger" style="width:100px" (click)="addClaim()"> Add Claim</button></div>
+      <div><button class="btn btn-danger" style="width:100px" (click)="addUser()"> Add User</button></div>
+    </div>
   <table class="table table-striped">
     <thead>
     <tr>
-      <th class="hidden">Id</th>
       <th>Category</th>
       <th>Bill Date</th>
       <th>Bill No</th>
@@ -14,7 +16,6 @@
     </thead>
     <tbody>
     <tr *ngFor="let claim of claims">
-      <td class="hidden">{{claim.id}}</td>
       <td>{{claim.catergory}}</td>
       <td>{{claim.billdate}}</td>
       <td>{{claim.billno}}</td>
