Changed the variables based on db

--- a/src/app/add-claim/add-claim.component.html
+++ b/src/app/add-claim/add-claim.component.html
@@ -11,17 +11,17 @@
 
     <div class="form-group">
       <label for="billdate">Bill Date:</label>
-      <input type="date" formControlName="billdate" name="billdate" class="form-control" id="billdate">
+      <input type="date" formControlName="billDate" name="billdate" class="form-control" id="billdate">
     </div>
 
     <div class="form-group">
       <label for="billno">Bill No:</label>
-      <input type="number" formControlName="billno" placeholder="Bill No" name="billno" min="1" max="10000000" class="form-control" id="billno">
+      <input type="number" formControlName="billNo" placeholder="Bill No" name="billno" min="1" max="10000000" class="form-control" id="billno">
     </div>
 
     <div class="form-group">
       <label for="claimamount">Claim Amount:</label>
-      <input type="number" formControlName="claimamount" placeholder="Claim Amount" name="claimamount" class="form-control" id="claimamount" min="1" max="300">
+      <input type="number" formControlName="claimAmount" placeholder="Claim Amount" name="claimamount" class="form-control" id="claimamount" min="1" max="300">
     </div>
 
     <button class="btn btn-success">Submit</button>
