--- a/src/app/list-claim/list-claim.component.html
+++ b/src/app/list-claim/list-claim.component.html
@@ -1,10 +1,9 @@
-<div class="col-md-10 user-container">
+<div class="col-lg-10 user-container">
   <h2 style="margin: auto">Claims</h2>
-  <div class="col-md-12 user-container">
-    <div class="row row-no-gutters">
-      <div><button class="btn btn-danger" style="width:100px" (click)="addClaim()"> Add Claim</button></div>
-      <div><button class="btn btn-danger" style="width:100px" (click)="addUser()"> Add User</button></div>
-    </div>
+  <div class="row row-no-gutters">
+    <div><button class="btn btn-danger" style="width:100px" (click)="addClaim()"> Add Claim</button></div>
+    <div><button class="btn btn-danger" style="width:100px" (click)="addUser()"> Add User</button></div>
+  </div>
   <table class="table table-striped">
     <thead>
     <tr>
