--- a/src/app/list-claim/list-claim.component.html
+++ b/src/app/list-claim/list-claim.component.html
@@ -15,7 +15,7 @@
     </thead>
     <tbody>
     <tr *ngFor="let claim of claims">
-      <td>{{claim.catergory}}</td>
+      <td>{{claim.category}}</td>
       <td>{{claim.billDate}}</td>
       <td>{{claim.billNo}}</td>
       <td>{{claim.claimAmount}}</td>
